Address PR comments
Signed-off-by: Taylor Gray <tylgry@amazon.com>